[gd_scene load_steps=15 format=3 uid="uid://j65f0vafqw86"]

[ext_resource type="MeshLibrary" uid="uid://c4ig5ro3hoao3" path="res://src/mesh_libraries/ground_library.tres" id="1_xm7y3"]
[ext_resource type="Script" path="res://src/scenes/level_editor.gd" id="2_b2rhs"]
[ext_resource type="Script" path="res://src/scenes/editor_view.gd" id="4_gxn6c"]
[ext_resource type="Texture2D" uid="uid://c0rbj02fx21ld" path="res://src/textures/grids/Light/texture_07.png" id="5_bry63"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7g0el"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_32t0o"]
sky_material = SubResource("ProceduralSkyMaterial_7g0el")

[sub_resource type="Environment" id="Environment_ddpo7"]
background_mode = 2
sky = SubResource("Sky_32t0o")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f61af"]
bg_color = Color(1, 1, 1, 0.392157)
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46o03"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 10
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.721569, 0.67451, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kyy22"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dcq1t"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_xo1tr"]
material = SubResource("StandardMaterial3D_dcq1t")
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nei3u"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.0784314)
albedo_texture = ExtResource("5_bry63")
uv1_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_ssc7g"]
size = Vector3(20, 20, 0)

[node name="LevelEditor" type="GridMap"]
mesh_library = ExtResource("1_xm7y3")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(65525, 13, 0, 65526, 13, 0, 65526, 12, 0, 65527, 12, 0, 65527, 11, 0, 65528, 10, 0, 65529, 10, 0, 65530, 9, 0, 65530, 8, 0, 65531, 8, 0, 65532, 6, 0, 65533, 5, 0, 65535, 3, 0, 0, 2, 0, 1, 1, 0, 1, 0, 0, 2, 0, 0, 2, 65535, 0, 3, 65535, 0, 3, 65534, 0, 3, 65533, 0, 4, 65533, 0, 4, 65532, 0, 5, 65532, 0, 5, 65531, 0, 6, 65531, 0, 6, 65530, 0, 7, 65530, 0, 7, 65529, 0, 8, 65529, 0, 8, 65528, 0, 9, 65528, 0, 9, 65527, 0, 10, 65527, 0, 10, 65526, 0, 11, 65526, 0, 11, 65525, 0, 12, 65525, 0, 11, 65524, 0, 10, 65524, 0, 10, 65523, 0, 9, 65523, 0, 8, 65523, 0, 7, 65523, 0, 6, 65522, 0, 5, 65522, 0, 4, 65522, 0, 3, 65522, 0, 2, 65522, 0, 1, 65522, 0, 1, 65521, 0, 0, 65521, 0, 65535, 65521, 0, 65534, 65521, 0, 65533, 65521, 0, 65532, 65521, 0, 65531, 65521, 0, 65530, 65521, 0, 65529, 65521, 0, 65528, 65521, 0, 65524, 13, 0, 65524, 12, 0, 65524, 11, 0, 65524, 10, 0, 65524, 9, 0, 65524, 8, 0, 65524, 7, 0, 65524, 6, 0, 65524, 5, 0, 65524, 4, 0, 65524, 3, 0, 65524, 2, 0, 65524, 1, 0, 65525, 1, 0, 65525, 0, 0, 65525, 65535, 0, 65525, 65534, 0, 65526, 65533, 0, 65526, 65532, 0, 65526, 65531, 0, 65526, 65530, 0, 65526, 65529, 0, 65526, 65528, 0, 65526, 65527, 0, 65526, 65526, 0, 65526, 65525, 0, 65526, 65524, 0, 65526, 65523, 0, 65526, 65522, 0, 65526, 65521, 0, 65526, 65520, 0, 65525, 65521, 0, 65524, 65521, 0, 65527, 65521, 0, 65523, 65521, 0, 65523, 65522, 0, 65523, 65523, 0, 65523, 65524, 0, 65523, 65525, 0, 65523, 65526, 0, 65523, 65527, 0, 65523, 65528, 0, 65523, 65529, 0, 65522, 65530, 0, 65522, 65531, 0, 65522, 65532, 0, 65522, 65533, 0, 65522, 65534, 0, 65522, 65535, 0, 65522, 0, 0, 65522, 1, 0, 65522, 2, 0, 65522, 3, 0, 65522, 4, 0, 65522, 5, 0, 65523, 5, 0, 65523, 6, 0, 65525, 9, 0, 65525, 10, 0, 65526, 10, 0, 65526, 11, 0, 65525, 12, 0, 65528, 12, 0, 65529, 12, 0, 65530, 12, 0, 65531, 12, 0, 65532, 12, 0, 65533, 12, 0, 65534, 12, 0, 65535, 12, 0, 0, 12, 0, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 12, 0, 5, 12, 0, 6, 12, 0, 7, 11, 0, 8, 11, 0, 9, 11, 0, 10, 11, 0, 11, 11, 0, 11, 10, 0, 11, 9, 0, 12, 8, 0, 12, 7, 0, 12, 6, 0, 12, 5, 0, 12, 4, 0, 12, 3, 0, 12, 2, 0, 12, 1, 0, 12, 0, 0, 12, 65535, 0, 12, 65534, 0, 12, 65533, 0, 12, 65532, 0, 12, 65531, 0, 12, 65530, 0, 13, 65529, 0, 13, 65528, 0, 13, 65527, 0, 13, 65526, 0, 13, 65525, 0, 13, 65524, 0, 12, 65524, 0, 65535, 65527, 0, 65527, 5, 0, 65525, 8, 0, 65526, 8, 0, 65527, 8, 0, 65528, 8, 0, 65528, 7, 0, 65528, 6, 0, 65529, 9, 0, 65529, 8, 0, 65529, 7, 0, 65527, 6, 0, 65526, 5, 0, 65525, 5, 0, 65525, 6, 0, 65525, 7, 0, 65526, 7, 0, 65526, 6, 0, 65525, 4, 0, 65526, 9, 0, 65527, 10, 0, 65528, 9, 0, 65527, 4, 0, 65526, 4, 0, 65529, 5, 0, 65529, 4, 0, 65529, 3, 0, 65528, 2, 0, 65527, 1, 0, 65526, 1, 0, 65527, 2, 0, 65527, 3, 0, 65530, 13, 0, 65531, 11, 0, 65531, 10, 0, 65531, 9, 0, 65530, 6, 0, 65530, 5, 0, 65527, 0, 0, 65527, 65535, 0, 65526, 65534, 0, 65526, 2, 0, 65528, 5, 0, 65529, 6, 0, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65533, 6, 0, 65533, 4, 0, 65533, 2, 0, 65532, 1, 0, 65532, 0, 0, 65531, 65535, 0, 65531, 65534, 0, 65530, 65533, 0, 65529, 65533, 0, 65529, 65534, 0, 65529, 0, 0, 65529, 1, 0, 65532, 10, 0, 1, 11, 0, 1, 10, 0, 1, 9, 0, 1, 7, 0, 2, 5, 0, 1, 3, 0, 0, 65535, 0, 65535, 65534, 0, 65534, 65532, 0, 65533, 65531, 9, 65532, 65531, 0, 65531, 65531, 0, 65530, 65531, 0, 65530, 65532, 0, 65530, 65534, 0, 65530, 65535, 0, 65531, 1, 0, 65532, 3, 0, 65535, 8, 0, 0, 9, 0, 2, 11, 0, 4, 11, 0, 5, 10, 0, 5, 9, 0, 6, 8, 0, 6, 6, 0, 6, 4, 0, 6, 1, 0, 5, 65535, 0, 3, 65531, 0, 1, 65530, 0, 0, 65530, 0, 65535, 65529, 0, 65534, 65529, 0, 65533, 65530, 7, 65532, 65530, 0, 65531, 65530, 0, 65533, 1, 0, 65534, 2, 0, 1, 4, 0, 2, 4, 0, 4, 5, 0, 5, 5, 0, 5, 4, 0, 6, 3, 0, 7, 3, 0, 7, 2, 0, 7, 1, 0, 6, 0, 0, 6, 65535, 0, 5, 65534, 0, 1, 65532, 0, 0, 65532, 0, 65535, 65532, 0, 65533, 65533, 9, 65532, 65533, 0, 65532, 65534, 0, 65532, 65535, 0, 65534, 3, 0, 65535, 4, 0, 0, 5, 0, 2, 6, 0, 3, 6, 0, 5, 6, 0, 7, 5, 0, 8, 4, 0, 8, 3, 0, 8, 1, 0, 8, 0, 0, 7, 65535, 0, 2, 65533, 0, 1, 65533, 0, 0, 65534, 0, 65534, 65534, 0, 65533, 65535, 0, 65533, 0, 0, 65532, 2, 0, 65533, 3, 0, 65534, 5, 0, 65535, 6, 0, 0, 7, 0, 2, 8, 0, 3, 8, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 6, 0, 7, 4, 0, 4, 65534, 0, 65535, 65533, 0, 65534, 65533, 0, 65530, 0, 0, 65530, 1, 0, 65531, 3, 0, 65531, 4, 0, 65532, 5, 0, 2, 7, 0, 3, 7, 0, 8, 5, 0, 9, 2, 0, 8, 2, 0, 7, 0, 0, 4, 65535, 0, 1, 65535, 0, 65535, 65535, 0, 65534, 0, 0, 65531, 2, 0, 65530, 3, 0, 65530, 4, 0, 65531, 5, 0, 65531, 6, 0, 65534, 8, 0, 0, 8, 0, 1, 8, 0, 9, 4, 0, 9, 3, 0, 10, 1, 0, 10, 0, 0, 10, 65535, 0, 9, 65534, 0, 8, 65533, 0, 7, 65532, 0, 6, 65532, 0, 3, 65532, 0, 0, 65533, 0, 65535, 1, 0, 1, 2, 0, 3, 3, 0, 5, 3, 0, 5, 0, 0, 65534, 65535, 0, 65535, 0, 0, 0, 1, 0, 3, 2, 0, 4, 3, 0, 10, 3, 0, 6, 2, 0, 4, 1, 0, 2, 1, 0, 65531, 0, 0, 4, 2, 0, 65529, 65535, 0, 65528, 65535, 0, 65528, 0, 0, 65535, 2, 0, 2, 3, 0, 4, 4, 0, 6, 5, 0, 10, 5, 0, 11, 5, 0, 9, 5, 0, 65529, 2, 0, 65525, 2, 0, 65534, 4, 0, 3, 5, 0, 1, 6, 0, 65534, 7, 0, 5, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 7, 7, 0, 11, 8, 0, 13, 8, 0, 11, 7, 0, 10, 7, 0, 9, 7, 0, 0, 6, 0, 65534, 6, 0, 65535, 7, 0, 4, 8, 0, 65527, 7, 0, 65533, 10, 0, 0, 10, 0, 2, 10, 0, 3, 11, 0, 5, 11, 0, 6, 11, 0, 7, 10, 0, 6, 10, 0, 4, 10, 0, 65535, 10, 0, 65527, 9, 0, 65530, 11, 0, 65532, 11, 0, 65535, 11, 0, 7, 12, 0, 10, 10, 0, 9, 10, 0, 8, 10, 0, 2, 9, 0, 65535, 9, 0, 65533, 9, 0, 65532, 9, 0, 4, 9, 0, 6, 9, 0, 65530, 7, 0, 65533, 8, 0, 3, 9, 0, 8, 9, 0, 7, 9, 0, 8, 6, 0, 5, 1, 0, 65533, 65534, 0, 65531, 65533, 0, 65527, 65532, 0, 65527, 65534, 0, 5, 2, 0, 6, 65534, 0, 5, 65529, 0, 4, 65528, 0, 4, 65527, 0, 3, 65526, 0, 2, 65525, 0, 2, 65526, 0, 3, 65527, 0, 4, 65529, 0, 5, 65530, 0, 8, 65534, 0, 9, 65535, 0, 11, 65535, 0, 11, 65534, 0, 11, 65529, 0, 11, 65528, 0, 10, 65528, 0, 10, 65529, 0, 10, 65530, 0, 9, 65532, 0, 8, 65526, 0, 8, 65521, 0, 8, 65520, 0, 8, 65519, 0, 7, 65519, 0, 7, 65518, 0, 7, 65520, 0, 7, 65521, 0, 7, 65525, 0, 7, 65527, 0, 7, 65531, 0, 7, 65533, 0, 8, 65535, 0, 8, 65532, 0, 8, 65527, 0, 8, 65525, 0, 8, 65524, 0, 8, 65530, 0, 9, 0, 0, 9, 65533, 0, 10, 65531, 0, 11, 65527, 0, 11, 65523, 0, 12, 65523, 0, 10, 65532, 0, 10, 65533, 0, 10, 65534, 0, 11, 65530, 0, 11, 65531, 0, 11, 65532, 0, 11, 65533, 0, 12, 65529, 0, 12, 65528, 0, 12, 65527, 0, 11, 0, 0, 11, 1, 0, 11, 2, 0, 10, 4, 0, 10, 6, 0, 9, 9, 0, 9, 6, 0, 11, 6, 0, 11, 4, 0, 11, 3, 0, 9, 1, 0, 10, 2, 0, 10, 8, 0, 10, 9, 0, 8, 7, 0, 3, 4, 0, 4, 6, 0, 0, 11, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 65534, 11, 0, 65533, 11, 0, 3, 10, 0, 65534, 10, 0, 65534, 9, 0, 65532, 8, 0, 65528, 11, 0, 65529, 11, 0, 65530, 10, 0, 65525, 11, 0, 65532, 4, 0, 65530, 2, 0, 65528, 1, 0, 65526, 3, 0, 65526, 0, 0, 65525, 3, 0, 65528, 3, 0, 65528, 4, 0, 65527, 65533, 0, 65527, 65531, 0, 65527, 65530, 0, 65527, 65528, 0, 65527, 65527, 0, 65527, 65526, 0, 65527, 65525, 0, 65527, 65524, 0, 65527, 65523, 0, 65527, 65522, 0, 65525, 65523, 0, 65525, 65524, 0, 65525, 65525, 0, 65525, 65526, 0, 65525, 65527, 0, 65524, 65528, 0, 65524, 65529, 0, 65524, 65530, 0, 65524, 65531, 0, 65524, 65532, 0, 65524, 65533, 0, 65524, 65534, 0, 65524, 65535, 0, 65523, 0, 0, 65523, 2, 0, 65523, 3, 0, 65522, 6, 0, 65521, 7, 0, 65521, 8, 0, 65521, 9, 0, 65521, 10, 0, 65521, 11, 0, 65521, 12, 0, 65521, 13, 0, 65521, 14, 0, 65522, 14, 0, 65522, 12, 0, 65522, 11, 0, 65522, 10, 0, 65523, 8, 0, 65523, 4, 0, 65523, 1, 0, 65525, 65529, 0, 65524, 65526, 0, 65524, 65527, 0, 65523, 65530, 0, 65523, 65531, 0, 65523, 7, 0, 65525, 65522, 0, 65524, 65522, 0, 65524, 65523, 0, 65524, 65524, 0, 65524, 65525, 0, 65524, 0, 0, 65523, 65535, 0, 65521, 65531, 0, 65521, 65530, 0, 65523, 65534, 0, 65523, 65533, 0, 65523, 65532, 0, 65525, 65528, 0, 65525, 65531, 0, 65525, 65530, 0, 65525, 65532, 0, 65525, 65533, 0, 65526, 65535, 0, 65528, 65529, 0, 65528, 65530, 0, 65528, 65531, 0, 65528, 65532, 0, 65528, 65528, 0, 65527, 65529, 0, 65528, 65524, 0, 65528, 65523, 0, 65528, 65522, 0, 65529, 65522, 0, 65529, 65523, 0, 65529, 65524, 0, 65529, 65525, 0, 65529, 65526, 0, 65529, 65527, 0, 65529, 65528, 0, 65529, 65529, 0, 65529, 65530, 0, 65529, 65531, 0, 65529, 65532, 0, 65531, 65532, 0, 65531, 65529, 0, 65531, 65528, 0, 65531, 65527, 0, 65530, 65526, 0, 65528, 65526, 0, 1, 65534, 0, 65528, 65534, 0, 65528, 65533, 0, 3, 0, 0, 1, 5, 0, 0, 4, 0, 65535, 5, 0, 0, 3, 0, 65534, 1, 0, 2, 2, 0, 65532, 65532, 0, 65533, 65532, 9, 65530, 65530, 0, 2, 65534, 0, 4, 0, 0, 65530, 65529, 0, 65535, 65531, 0, 65530, 65528, 0, 65534, 65531, 0, 1, 65531, 0, 65534, 65530, 0, 65533, 65529, 0, 2, 65532, 0, 65532, 65528, 0, 65530, 65527, 0, 65528, 65525, 0, 65533, 65528, 0, 65535, 65530, 0, 65532, 65527, 0, 65522, 65521, 0, 65531, 65526, 0, 5, 65533, 0, 2, 65531, 0, 0, 65529, 0, 65534, 65528, 0, 65533, 65527, 0, 65532, 65526, 0, 65530, 65525, 0, 6, 65533, 0, 4, 65531, 0, 2, 65530, 0, 65534, 65527, 0, 65531, 65525, 0, 65530, 65524, 0, 65535, 65528, 0, 1, 65529, 0, 3, 65530, 0, 0, 65528, 0, 65532, 65525, 0, 2, 65529, 0, 4, 65530, 0, 3, 65529, 0, 2, 65528, 0, 65534, 65526, 0, 65533, 65525, 0, 65532, 65524, 0, 65535, 65526, 0, 0, 65527, 0, 0, 65526, 0, 65534, 65525, 0, 65531, 65523, 0, 65530, 65522, 0, 65533, 65524, 0, 1, 65527, 0, 3, 65528, 0, 65535, 65525, 0, 65533, 65523, 0, 65531, 65522, 0, 65527, 65520, 0, 65532, 65523, 0, 65530, 65523, 0, 2, 65527, 0, 8, 65531, 0, 6, 65529, 0, 5, 65528, 0, 65534, 65524, 0, 65535, 65524, 0, 0, 65525, 0, 1, 65526, 0, 9, 65531, 0, 9, 65530, 0, 9, 65529, 0, 7, 65528, 0, 5, 65527, 0, 1, 65525, 0, 65535, 65523, 0, 65533, 65522, 0, 65532, 65522, 0, 6, 65527, 0, 5, 65526, 0, 4, 65525, 0, 3, 65525, 0, 1, 65524, 0, 0, 65524, 0, 2, 65524, 0, 6, 65525, 0, 5, 65525, 0, 3, 65524, 0, 2, 65523, 0, 0, 65523, 0, 65535, 65522, 0, 1, 65523, 0, 4, 65524, 0, 14, 65529, 0, 9, 65526, 0, 5, 65524, 0, 0, 65522, 0, 4, 65523, 0, 5, 65523, 0, 7, 65524, 0, 9, 65524, 0, 10, 65525, 0, 6, 65523, 0, 12, 65526, 0, 9, 65525, 0, 6, 65524, 0, 3, 65523, 0, 65534, 65522, 0, 65534, 65523, 0, 4, 65526, 0, 6, 65526, 0, 7, 65526, 0, 6, 65528, 0, 65533, 65526, 0, 1, 65528, 0, 0, 65531, 0, 65528, 65527, 0, 65532, 65529, 0, 65531, 65524, 0, 0, 0, 0, 3, 1, 0, 7, 65534, 0, -4, 65531, 9, -3, 65531, 9, -3, 65532, 9)
}
script = ExtResource("2_b2rhs")
libraries = Array[MeshLibrary]([ExtResource("1_xm7y3")])
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ddpo7")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="EditorUI" type="CanvasLayer" parent="."]

[node name="VBox" type="VBoxContainer" parent="EditorUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TopPanel" type="Panel" parent="EditorUI/VBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f61af")

[node name="Margin" type="MarginContainer" parent="EditorUI/VBox/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBox" type="HBoxContainer" parent="EditorUI/VBox/TopPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Back" type="Panel" parent="EditorUI/VBox/TopPanel/Margin/HBox"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_46o03")

[node name="Margin" type="MarginContainer" parent="EditorUI/VBox/TopPanel/Margin/HBox/Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 7

[node name="Button" type="Button" parent="EditorUI/VBox/TopPanel/Margin/HBox/Back/Margin"]
layout_mode = 2
text = "Back"

[node name="Category" type="ScrollContainer" parent="EditorUI/VBox/TopPanel/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3

[node name="Items" type="HBoxContainer" parent="EditorUI/VBox/TopPanel/Margin/HBox/Category"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="Tiles" type="ScrollContainer" parent="EditorUI/VBox/TopPanel/Margin/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3

[node name="Items" type="HBoxContainer" parent="EditorUI/VBox/TopPanel/Margin/HBox/Tiles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="InteractibleZonePanel" type="Panel" parent="EditorUI/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_kyy22")

[node name="TilePreview" type="TextureRect" parent="EditorUI"]
custom_minimum_size = Vector2(70, 70)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
expand_mode = 1

[node name="EditorView" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7, 0)
current = true
script = ExtResource("4_gxn6c")

[node name="EditorPlane" type="Area3D" parent="EditorView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.75)

[node name="Plane" type="CSGMesh3D" parent="EditorView/EditorPlane"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_xo1tr")
material = SubResource("StandardMaterial3D_nei3u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="EditorView/EditorPlane"]
shape = SubResource("BoxShape3D_ssc7g")

[connection signal="mouse_entered" from="EditorUI/VBox/InteractibleZonePanel" to="." method="_on_ui_panel_mouse_entered"]
[connection signal="mouse_exited" from="EditorUI/VBox/InteractibleZonePanel" to="." method="_on_ui_panel_mouse_exited"]
